[project]
name = "final_project_d200"
version = "0.1"
requires-python = ">=3.10"
authors = [
  {name = "Anonymous"},
]
description = "Modeling Bitcoin Distributions"
readme = "README.md"
keywords = ["bitcoin", "data analysis", "data science", "finance", "deep learning"]
classifiers = [
  "Programming Language :: Python"
]

[tool.setuptools]
packages = ["final_project_d200"]